# LangtonsAnt

./: CMakeLists.txt  README.md
Headers/: Ant.h  Application.h  Automaton.h  Random.h
Sources/: Ant.cpp  Application.cpp  Automaton.cpp  Random.cpp  main.cpp
